--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -16,8 +16,15 @@
       Details &raquo;
     <% end %>
   </footer>
+  <% if product.quantity === 0 %>
+  <aside class="soldout">
+    Soldout
+  </aside>
+  <% end %>
 
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
+  
 </article>
