--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -7,6 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
+      <% if current_user %>
+        Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+        <% else %>
+        <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+      <% end %>
+      
       <a class="navbar-brand" href="/">Jungle</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
@@ -25,6 +32,8 @@
             <% end %>
           </ul>
         </li>
+
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
