added more order information to render on order page

--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,7 +1,12 @@
 <section>
+
 <p>
 Quantity: 
 <%= line_item.quantity %>
 <p>
 Item Price $ <%= line_item.item_price_cents %>
+<h6> Item Name <%= line_item.product.name %> </h6>
+
+
+
 </section>
