--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,10 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+<% if enhanced_cart.size == 0 %>
+  <h5> Please add item to cart </h5>
+  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+<% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -18,6 +21,7 @@
         <% enhanced_cart.each do |item| %>
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
+     
       </tbody>
       <tfoot>
         <tr>
@@ -31,6 +35,7 @@
       </tfoot>
     </table>
   </div>
+ 
 
   <div class="row">
     <div class="col-xs-12">
@@ -48,5 +53,5 @@
       <% end %>
     </div>
   </div>
-
+  <% end %>
 </section>
